Bug 267006 - Power Management Profiles gives no indication when power service is not running
Summary: Power Management Profiles gives no indication when power service is not running
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-23 20:35 UTC by Ralf Engels
Modified: 2011-09-30 14:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Engels 2011-02-23 20:35:29 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Since 4.6 my system has the following problems (in order of discovery)

1. hibernate via KDE not working. Calling pm-hibernate and s2disk is working
2. Power configuration management settings panel does not show any profiles in the list box
In addition creating a new profile or resetting the profile to the default does nothing.
3. Battery widget shows a red "X"

Reproducible: Always

Steps to Reproduce:
For me this is just the way my system currently behaves

Actual Results:  
No power profiles

Expected Results:  
I should have at least the default profile and if something is preventing the power management from working the configuration settings should display a hint.
Comment 1 Lamarque V. Souza 2011-02-24 18:04:43 UTC
Which distribution do you use? What do you have installed: hald, upower, both? You can safely remove hald, KDE SC 4.6.x uses upower/udisks/udev by default. Using both at the same time can cause some problems.

Do not use the "reset to default" button, it will erase all your profiles and you will have to create them from scratch, which seems to be your case now.
Comment 2 Ralf Engels 2011-02-24 18:37:08 UTC
Hi,
Ubuntu with both hald and upower are installed.

I did not see any profile to start with and I hoped that "reset" will give me at least a default profile because creating a new profile did not work.

Maybe it's a faulty old configuration setting but I removed all powerdevil settings and nothing changed.

Any further ideas?
Comment 3 Ralf Engels 2011-02-26 21:13:53 UTC
Further information:

Adding a profile does add something to the configuration file but does not change the UI.
This leads me to the impression that somehow the call to re-read the configuration file is not working.

It turns out that qdbusview only shows org.freedesktop.UPower but no powerdevil daemon.

Still investigating....
Comment 4 Ralf Engels 2011-02-27 20:19:36 UTC
Ok. I figured it out.

The power service was not running and needed to be switched on in the configuration "Startup and shutdown/services"

The power settings ABSOLUTELY need to display a notification about a not-running power service.
Comment 5 Dario Freddi 2011-09-18 13:55:38 UTC
Git commit b264940ff05acafe8d4b9028d63c994976c2edfa by Dario Freddi.
Committed on 18/09/2011 at 15:54.
Pushed by dafre into branch 'master'.

Apply an overlay notifying the user the Power Management service is not running.

Whenever the daemon is not running, we don't want to let the user edit anything, as the config itself
relies on the daemon.

BUG: 267006

M  +5    -0    powerdevil/kcmodule/CMakeLists.txt
A  +110  -0    powerdevil/kcmodule/common/ErrorOverlay.cpp     [License: GPL (v2+)]
C  +15   -18   powerdevil/kcmodule/common/ErrorOverlay.h [from: powerdevil/kcmodule/global/GeneralPage.h - 073% similarity]
M  +1    -0    powerdevil/kcmodule/global/CMakeLists.txt
M  +44   -4    powerdevil/kcmodule/global/GeneralPage.cpp
M  +6    -0    powerdevil/kcmodule/global/GeneralPage.h
M  +1    -0    powerdevil/kcmodule/profiles/CMakeLists.txt
M  +40   -0    powerdevil/kcmodule/profiles/EditPage.cpp
M  +5    -0    powerdevil/kcmodule/profiles/EditPage.h

http://commits.kde.org/kde-workspace/b264940ff05acafe8d4b9028d63c994976c2edfa
Comment 6 Dario Freddi 2011-09-30 14:12:54 UTC
Git commit 10572685558abfe1fab034907b6e1eaaf2c12ed9 by Dario Freddi.
Committed on 18/09/2011 at 15:54.
Pushed by dafre into branch 'KDE/4.7'.

Apply an overlay notifying the user the Power Management service is not running.

Whenever the daemon is not running, we don't want to let the user edit anything, as the config itself
relies on the daemon.

BUG: 267006
FIXED-IN: 4.7.2

M  +5    -0    powerdevil/kcmodule/CMakeLists.txt
A  +110  -0    powerdevil/kcmodule/common/ErrorOverlay.cpp     [License: GPL (v2+)]
C  +15   -18   powerdevil/kcmodule/common/ErrorOverlay.h [from: powerdevil/kcmodule/global/GeneralPage.h - 073% similarity]
M  +1    -0    powerdevil/kcmodule/global/CMakeLists.txt
M  +44   -4    powerdevil/kcmodule/global/GeneralPage.cpp
M  +6    -0    powerdevil/kcmodule/global/GeneralPage.h
M  +1    -0    powerdevil/kcmodule/profiles/CMakeLists.txt
M  +40   -0    powerdevil/kcmodule/profiles/EditPage.cpp
M  +5    -0    powerdevil/kcmodule/profiles/EditPage.h

http://commits.kde.org/kde-workspace/10572685558abfe1fab034907b6e1eaaf2c12ed9