Apply an overlay notifying the user the Power Management service is not running.

Whenever the daemon is not running, we don't want to let the user edit anything, as the config itself
relies on the daemon.

BUG: 267006