kcmodule/common/ErrorOverlay.cpp
@@ -1,0 +1,110 @@
+/***************************************************************************
+ *   Copyright (C) 2011 by Dario Freddi <drf@kde.org>                      *
+ *                                                                         *
+ *   This program is free software; you can redistribute it and/or modify  *
+ *   it under the terms of the GNU General Public License as published by  *
+ *   the Free Software Foundation; either version 2 of the License, or     *
+ *   (at your option) any later version.                                   *
+ *                                                                         *
+ *   This program is distributed in the hope that it will be useful,       *
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of        *
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         *
+ *   GNU General Public License for more details.                          *
+ *                                                                         *
+ *   You should have received a copy of the GNU General Public License     *
+ *   along with this program; if not, write to the                         *
+ *   Free Software Foundation, Inc.,                                       *
+ *   51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA .        *
+ ***************************************************************************/
+
+#include "ErrorOverlay.h"
+
+#include <QtCore/QEvent>
+#include <QtGui/QLabel>
+#include <QtGui/QVBoxLayout>
+
+#include <KIcon>
+#include <KLocalizedString>
+
+ErrorOverlay::ErrorOverlay(QWidget *baseWidget, const QString &details, QWidget *parent) :
+    QWidget(parent ? parent : baseWidget->window()),
+    m_BaseWidget(baseWidget)
+{
+    // Build the UI
+    QVBoxLayout *layout = new QVBoxLayout;
+    layout->setSpacing(10);
+
+    QLabel *pixmap = new QLabel();
+    pixmap->setPixmap(KIcon("dialog-error").pixmap(64));
+
+    QLabel *message = new QLabel(i18n("Power Management configuration module could not be loaded.\n%1", details));
+
+    pixmap->setAlignment(Qt::AlignHCenter);
+    message->setAlignment(Qt::AlignHCenter);
+
+    layout->addStretch();
+    layout->addWidget(pixmap);
+    layout->addWidget(message);
+    layout->addStretch();
+
+    setLayout(layout);
+
+    // Draw the transparent overlay background
+    QPalette p = palette();
+    p.setColor(backgroundRole(), QColor(0, 0, 0, 128));
+    p.setColor(foregroundRole(), Qt::white);
+    setPalette(p);
+    setAutoFillBackground(true);
+
+    m_BaseWidget->installEventFilter(this);
+
+    reposition();
+}
+
+ErrorOverlay::~ErrorOverlay()
+{
+}
+
+void ErrorOverlay::reposition()
+{
+    if (!m_BaseWidget) {
+        return;
+    }
+
+    // reparent to the current top level widget of the base widget if needed
+    // needed eg. in dock widgets
+    if (parentWidget() != m_BaseWidget->window()) {
+        setParent(m_BaseWidget->window());
+    }
+
+    // follow base widget visibility
+    // needed eg. in tab widgets
+    if (!m_BaseWidget->isVisible()) {
+        hide();
+        return;
+    }
+
+    show();
+
+    // follow position changes
+    const QPoint topLevelPos = m_BaseWidget->mapTo(window(), QPoint(0, 0));
+    const QPoint parentPos = parentWidget()->mapFrom(window(), topLevelPos);
+    move(parentPos);
+
+    // follow size changes
+    // TODO: hide/scale icon if we don't have enough space
+    resize(m_BaseWidget->size());
+}
+
+bool ErrorOverlay::eventFilter(QObject * object, QEvent * event)
+{
+    if (object == m_BaseWidget &&
+        (event->type() == QEvent::Move || event->type() == QEvent::Resize ||
+        event->type() == QEvent::Show || event->type() == QEvent::Hide ||
+        event->type() == QEvent::ParentChange)) {
+        reposition();
+    }
+    return QWidget::eventFilter(object, event);
+}
+
+#include "ErrorOverlay.moc"
